--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sistema-restaurante-qr",
+  "name": "corrales-restaurant",
   "version": "1.0.0",
-  "description": "Sistema de pedidos con QR para restaurante",
+  "description": "Sistema de pedidos con QR para Corrales Restaurant",
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js"
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "multer": "^1.4.5"
   }
 }
