--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Sistema de pedidos con QR para Corrales Restaurant",
   "main": "backend/server.js",
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+    "build": "echo 'No build step required'"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5"
+    "cors": "^2.8.5"
   }
 }
